# c-study

./: .gitignore  CMakeLists.txt  aa.txt
image/: a.tif
include/: CMakeLists.txt  math.h  stock00.h  stock10.h
src/: Makefile
test/: 1.c  7.1.c  CMakeLists.txt  Makefile  Time.cpp  add-example.c  addpntrs.cpp  address.cpp  arraynew.cpp  arrfun.cpp  arrfun1.cpp  arrfun3.cpp  assgn_st.cpp  calling.cpp  circle_area.cpp  class_array.cpp  class_define.cpp  class_fun.cpp  class_fuzhi1.cpp  class_static.cpp  class_static1.cpp  class_student.cpp  class_student1.cpp  class_table.cpp  class_time.cpp  class_zhizhen.cpp  cmake_install.cmake  define-test.c  digui_jiechen.cpp  email.cpp  exchange.cpp  express.cpp  if.cpp  imwrite-test.cpp  initTable.c  init_ptr.cpp  lotoo.cpp  lotto.cpp  main-01.cpp  main-02.cpp  (+38 more)
test/oldstudy/: 3.19.c  3.c  4.4.c  Array_max.cpp  Fibonacci_array.cpp  array_fun.cpp  array_funname.cpp  array_transport.cpp  arrfun2.cpp  arrfun3.cpp  change.c  char-test.c  char.c  class-test1.cpp  class_argv.cpp  class_fun.cpp  class_fuzhi.cpp  class_this.cpp  class_youyuan.cpp  debug.cpp  div.c  extern.cpp  fun_chongzai1.cpp  fun_struct.cpp  fun_temple.cpp  getchar.c  if-else.c  num_test.cpp  qp_sort.cpp  read_txt.c  solver_equation.cpp  string_xuanju.cpp  struct_1.cpp  structur.cpp  student_struct.c  style-change.c  table.cpp  test_01.c  test_02.c  test_array.cpp  (+11 more)
